--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
   font-optical-sizing: auto;
 }
 /* 1st part */
-
+.fas{
+    
+}
 .cover{ 
     background: linear-gradient(
         to top,
@@ -310,7 +312,8 @@
 .fas{
     color: #FFFFFF;
     display: inline;
-    margin-right: 1200px;
+    margin-right: -20px;
+    display: block;
 }
 .cover{
     width: 400px;
@@ -318,7 +321,7 @@
 }
 
 .control{
-    width: 400px;
+    width: auto;
     
 }
 .shape{
